# DUNEPrismTools

./: CMakeLists.txt  README.md
G4ArSimulationTools/: BoundingBox.h  BuildFDPrediction.cxx  CMakeLists.txt  CovarianceHelper.h  DepoParticle.h  DunePrismCondenser.cxx  EDepTreeReader.h  EfficiencyWeightFriendTreeBuilder.cxx  FullDetTreeReader.h  FullDetTreeStopProcessor.c++  FullDetTreeStopProcessor.cxx  G4ArEventDisplay.cxx  G4ArReader.cxx  G4ArReader.h  MatrixToolsTester.cxx  PRISMAnalysis.cxx  ProduceEfficiencyCorrector.cxx  RunSelection.cxx  VALORModelClassifier.h  XSecVarFriendTreeBuilder.cxx
G4ArSimulationTools/pbs/: BuildInputsList_ProcessFromG4Ar.sh  CondenseAndProcess.sh  FHC_FD_pbs_maker.sh  FHC_con_full_pbs_maker.sh  FHC_con_pbs_maker.sh  FHC_pbs_maker.sh  FHC_processor_pbs_maker.sh  FarmCondenseAndProcess.sh  FarmProcess.sh  Process.sh  RHC_con_full_pbs_maker.sh  RHC_con_pbs_maker.sh  RHC_processor_pbs_maker.sh  SubmitCondenseAndProcess.sh  SubmitProcess.sh  check.py
G4ArSimulationTools/plots/: EffCorrectionSanity.C  SanityPlots_EDeps_Tree.C  doEff.py  eff_elasticity.py  event_rates.py  oaa_events.py
app/ana_tools/: BuildFDPrediction.cxx  CAFCombiner.cxx  CMakeLists.txt  EfficiencyWeightFriendTreeBuilder.cxx  FluxVarFriendTreeBuilder.cxx  LinearCombinationUncertainties.cxx  NDFDFluxRatioPlots.cxx  PRISMAnalysis.cxx  ProcessedCAFDiagnosticPlots.cxx  ProcessedCAFDumpNominalEventRates.cxx  ProcessedCAFPRISMPrediction.cxx  ProduceDiagnosticPlots.cxx  ProduceEfficiencyCorrector.cxx  RunSelection.cxx  XSecVarFriendTreeBuilder.cxx  gspl2root.cxx
app/flux_tools/: BuildFluxes.cxx  BuildNuRayTree.cxx  BuildUncertaintyMatrix.cxx  CMakeLists.txt  CombineBuiltFluxes.cxx  FitFluxes.cxx  FluxLinearSolver_Standalone.cxx  FluxSmusher.cxx  MakeLitedk2nu.cxx  OscillateFlux.cxx  PredictRunPlanEventRates.cxx  ReconstitutedDk2Nu.cxx
app/sim_tools/: CMakeLists.txt  CheckRunPlanCoverage.cxx  Condenser.cxx  DunePrismCondenser.cxx  FullDetTreeStopProcessor.cxx  StopProcessor.cxx
app/tests/: CMakeLists.txt  MatrixToolsTester.cxx
configs/: CMakeLists.txt  DUNEPrismFluxWindow.xml  DUNEPrismLArBox.geom.manual.gdml  FullDetRunPlan.xml  OnAxisCBox1m3.geom.manual.gdml  OnAxisLArBox.geom.manual.gdml  OnAxisLArBox_FD_25.8mx23.8mx56.6m.xml  RunPlan.39mLAr.3mFV.10cm.2.5x4m.xml  RunPlan.39mLAr.3mFV.10cm.2mx4m.xml  RunPlan.39mLAr.3mFV.10cm.2mx4m_withintermediates.xml  RunPlan.LArDUNEFV_25.8mx23.8mx56.6m.xml  gspline.config.xml
configs/g4lbnf_macros/: OptimizedEngineeredNov2017Review_DecayPipeXShift_nubarmode.mac  OptimizedEngineeredNov2017Review_DecayPipeXShift_numode.mac  OptimizedEngineeredNov2017Review_DecayPipeYShift_nubarmode.mac  OptimizedEngineeredNov2017Review_DecayPipeYShift_numode.mac  OptimizedEngineeredNov2017Review_HC200kA_numode.mac  OptimizedEngineeredNov2017Review_HC250kA_numode.mac  OptimizedEngineeredNov2017Review_HC280kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC280kA_numode.mac  OptimizedEngineeredNov2017Review_HC295.5kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC295.5kA_numode.mac  OptimizedEngineeredNov2017Review_HC298kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC298kA_numode.mac  OptimizedEngineeredNov2017Review_HC300.5kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC300.5kA_numode.mac  OptimizedEngineeredNov2017Review_HC303kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC303kA_numode.mac  OptimizedEngineeredNov2017Review_HC305.5kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC305.5kA_numode.mac  OptimizedEngineeredNov2017Review_HC308kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC308kA_numode.mac  OptimizedEngineeredNov2017Review_HC310.5kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC310.5kA_numode.mac  OptimizedEngineeredNov2017Review_HC313kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC313kA_numode.mac  OptimizedEngineeredNov2017Review_HC323kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC323kA_numode.mac  OptimizedEngineeredNov2017Review_HC333kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC333kA_numode.mac  OptimizedEngineeredNov2017Review_HC343kA_nubarmode.mac  OptimizedEngineeredNov2017Review_HC343kA_numode.mac  OptimizedEngineeredNov2017Review_Horn1And2X1mmShift_nubarmode.mac  OptimizedEngineeredNov2017Review_Horn1And2X1mmShift_numode.mac  OptimizedEngineeredNov2017Review_Horn1And2X1mmTilt_nubarmode.mac  OptimizedEngineeredNov2017Review_Horn1And2X1mmTilt_numode.mac  OptimizedEngineeredNov2017Review_Horn1And2Y1mmShift_nubarmode.mac  OptimizedEngineeredNov2017Review_Horn1And2Y1mmShift_numode.mac  OptimizedEngineeredNov2017Review_Horn1And2Y1mmTilt_nubarmode.mac  OptimizedEngineeredNov2017Review_Horn1And2Y1mmTilt_numode.mac  OptimizedEngineeredNov2017Review_Horn1And2_1mmShift_nubarmode.mac  OptimizedEngineeredNov2017Review_Horn1And2_1mmShift_numode.mac  (+46 more)
configs/gdml/: DUNEPrismLArBox.geom.manual.gdml  OnAxisLArBox1m3.geom.manual.gdml  OnAxisLArBox_FD_25.8mx22.6mx56.6m.gdml
configs/run_plans/: RunPlan.39mLAr.3mFV.10cm.2mx4m.xml  RunPlan.39mLAr.3mFV.10cm.2mx4m_withintermediates.xml  RunPlan.39mLAr.4mx3mx5mActive.xml  RunPlan.39mLAr.4mx3mx5mActive_overlaps.xml  RunPlan.39mLAr.7mx3mx5mActive_overlaps.xml  RunPlan.LArDUNEFD.25.8mx23.8mx56.6mFV.xml  RunPlan.LArDUNEFV_25.8mx23.8mx56.6m.xml
jake-contrib/: 39m_13stops.xml  CMakeLists.txt  DepoParticle.h  DunePrismAnalyzer  DunePrismAnalyzer.c++  DunePrismAnalyzer.h  DunePrismCondenser.c++  DunePrismCondenser.h  FD_1stop.xml  FluxVarFriendTreeBuilder.c++  FullDetTreeReader.h  FullDetTreeStopProcessor.c++  xml_parse.h
jake-contrib/config/: 39m_13stops.xml
jake-contrib/pbs/: FHC_FD_pbs_maker.sh  FHC_con_full_pbs_maker.sh  RHC_FD_pbs_maker.sh  RHC_pbs_maker.sh  RHC_processor_pbs_maker.sh  check.py
scripts/: BuildArgonBoxGeom.C  CMakeLists.txt  CombineFluxVariations.sh  MakeGENIERTSanityPlots.C  MakeSlimFluxSanityPlots.C  PDGOscillate.sh  ProcessFluxUncertaintyMatrix.sh  ProcessFluxVarJobs.sh  ProcessGENIEEventJobs.sh  buildFluxes.sh  genierun.mac
src/: CMakeLists.txt  DetectorStop.hxx  GENIESplineReader.hxx  NuDataReader.hxx  Utils.hxx
src/app/: BuildFluxes.cxx  (+7 more)
(+298 files in other folders)
