LIST(APPEND INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/utility)
LIST(APPEND INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/persistency)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/persistency)

LIST(APPEND INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/flux_tools)
LIST(APPEND INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/sim_tools)
LIST(APPEND INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/ana_tools)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/flux_tools)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sim_tools)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ana_tools)

SET(LOCAL_INCLUDE_DIRECTORIES ${INCLUDE_DIRECTORIES})
SET(INCLUDE_DIRECTORIES ${LOCAL_INCLUDE_DIRECTORIES} PARENT_SCOPE)

SET(LOCAL_MODULETargets ${MODULETargets})
SET(MODULETargets ${LOCAL_MODULETargets} PARENT_SCOPE)
