LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/utility)
LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/persistency)
LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/flux_tools)
# LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/sim_tools)
LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/ana_tools)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/persistency)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/flux_tools)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sim_tools)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ana_tools)

SET(LOCAL_INCDIRS ${INCDIRS})
SET(INCDIRS ${LOCAL_INCDIRS} PARENT_SCOPE)

SET(LOCAL_MODULETargets ${MODULETargets})
LIST(REVERSE LOCAL_MODULETargets)
SET(MODULETargets ${LOCAL_MODULETargets} PARENT_SCOPE)
